Fixes missing href attribute on anchor in site nav.

--- a/_layouts/_haml/base.haml
+++ b/_layouts/_haml/base.haml
@@ -30,7 +30,7 @@
           %a.site-title{ href: "{{ site.baseurl }}" } {{ site.title }}
 
           %nav.site-nav
-            %a.menu-icon<
+            %a.menu-icon{ href: "#" }<
               %span.fa.fa-bars
             .trigger
               {% include main-nav.html %}
