--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -19,7 +19,7 @@
         <div class='l-align-middle'>
           <a class='site-title' href='{{ site.baseurl }}'>{{ site.title }}</a>
           <nav class='site-nav'>
-            <a class='menu-icon'><span class='fa fa-bars'></span></a>
+            <a class='menu-icon' href='#'><span class='fa fa-bars'></span></a>
             <div class='trigger'>
               {% include main-nav.html %}
             </div>
