--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,7 +5,7 @@
     <meta content='width=device-width' name='viewport'>
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta content='{{ site.description }} ' name='description'>
-    <link href='/css/main-cheatsheets.css' rel='stylesheet' type='text/css'>
+    <link href='/cheatsheets/css/main-cheatsheets.css' rel='stylesheet' type='text/css'>
     <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet'>
     <script src='//use.typekit.net/ann6kvn.js'></script>
     <script>try{Typekit.load();}catch(e){}</script>
