--- a/_layouts/_haml/base.haml
+++ b/_layouts/_haml/base.haml
@@ -9,7 +9,7 @@
 
     %meta{name: "description", content: "{{ site.description }} "}
 
-    %link{rel: "stylesheet", href: "/cheatsheets/css/main-cheatsheets.css", type: "text/css" }
+    %link{rel: "stylesheet", href: "{{ site.baseurl }}/css/main-cheatsheets.css", type: "text/css" }
 
     %link{rel: "stylesheet", href: "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" }
 
