--- a/index.haml
+++ b/index.haml
@@ -6,7 +6,7 @@ layout: base
 %h1<= "Cheatsheets"
 
 %p<
-  Learn all the keyboard shortcuts! View and print simplified keyboard shortcut documents for all your favorite tools!
+  Learn all the keyboard shortcuts! View and print simplified keyboard shortcut documents for all your favorite tools.
 
 %h3<= "Available Cheatsheets"
 
