--- a/index.haml
+++ b/index.haml
@@ -6,7 +6,9 @@ layout: base
 %h1<= "Cheatsheets"
 
 %p<
-  Learn all the keyboard shortcuts! View and print simplified keyboard shortcut documents for all your favorite tools.
+  Learn all the keyboard shortcuts! View and print simplified keyboard shortcut documents for all your favorite tools. Want to see more cheatsheets for here?
+  %a{href: "https://github.com/ursooperduper/cheatsheets" }<
+    Contribute to this project on Github! 
 
 %h3<= "Available Cheatsheets"
 
