Adds 1Password, Dropbox, Evernote, Jira, and TweetDeck cheatsheets.

--- a/index.haml
+++ b/index.haml
@@ -6,9 +6,9 @@ layout: base
 %h1<= "Cheatsheets"
 
 %p<
-  Learn all the keyboard shortcuts! View and print simplified keyboard shortcut documents for all your favorite tools. Want to see more cheatsheets for here?
+  Learn all the keyboard shortcuts for Mac apps and tools! Here, you can view and print beautiful keyboard shortcut documents. Want to see more cheatsheets here?
   %a{href: "https://github.com/ursooperduper/cheatsheets" }<
-    Contribute to this project on Github! 
+    Contribute to this project on Github!
 
 %h3<= "Available Cheatsheets"
 
