--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,722 @@
+body, h1, h2, h3, h4, h5, h6,
+p, blockquote, pre, hr,
+dl, dd, ol, ul, figure {
+  margin: 0;
+  padding: 0; }
+
+html, body {
+  height: 100%; }
+
+body {
+  background-color: #eee;
+  color: #383838;
+  font-family: "rooney-sans", sans-serif;
+  font-size: 0.95em;
+  font-weight: 300;
+  line-height: 1.4; }
+
+h1, h2, h3, h4, h5, h6,
+p, blockquote, pre,
+ul, ol, dl, figure {
+  margin-bottom: 10px; }
+
+img {
+  display: block;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 10px 0;
+  vertical-align: middle; }
+
+ul, ol {
+  margin-left: 20px; }
+
+li > ul,
+li > ol {
+  margin-bottom: 0; }
+
+h1, h2, h3, h4, h5, h6 {
+  color: #126868;
+  font-weight: 500; }
+
+a {
+  color: #126868;
+  text-decoration: none; }
+  a:hover {
+    color: #072727;
+    text-decoration: underline; }
+
+blockquote {
+  padding: 10px;
+  border-left: 4px solid #c9c9c9;
+  color: #5d5d60;
+  font-size: 1.05em;
+  font-style: italic;
+  letter-spacing: -1px; }
+  blockquote > :last-child {
+    margin-bottom: 0; }
+
+iframe {
+  display: block;
+  margin: 0 auto; }
+
+pre, code {
+  padding: 1px 5px;
+  border: 1px solid #c9c9c9;
+  border-radius: 3px;
+  background-color: #eef;
+  font-size: 1.05em; }
+
+pre {
+  padding: 8px 12px;
+  overflow-x: scroll; }
+  pre > code {
+    padding: 0;
+    border: 0; }
+
+hr {
+  margin-bottom: 20px;
+  border: 0;
+  border-bottom: 1px dashed #c9c9c9;
+  background: #999; }
+
+.l-wrapper {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column nowrap;
+  -ms-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  width: 100%;
+  min-height: 100%; }
+
+.l-align-middle {
+  max-width: calc(800px - (20px * 2));
+  margin: 0 auto;
+  padding: 0 20px; }
+  @media screen and (max-width: 800px) {
+    .l-align-middle {
+      max-width: calc(800px - (20px));
+      padding: 0 10px; } }
+
+.l-section-spacing {
+  margin-bottom: 20px; }
+
+.l-page-content {
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  padding: 20px; }
+
+.l-footer-wrapper {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row nowrap;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap;
+  margin-left: -10px;
+  color: #5d5d60;
+  font-size: 1.2em; }
+
+.l-footer-col {
+  margin-bottom: 10px;
+  padding-left: 10px; }
+
+.l-footer-col-1 {
+  width: calc(30% - 10px);
+  margin-bottom: 10px;
+  padding-left: 10px; }
+
+.l-footer-col-2 {
+  width: calc(70% - 20px);
+  margin-bottom: 10px;
+  padding-left: 10px;
+  font-size: .8em; }
+
+@media screen and (max-width: 800px) {
+  .l-footer-col-1,
+  .l-footer-col-2 {
+    width: calc(100% - 10px); } }
+
+@media screen and (max-width: 600px) {
+  .l-footer-wrapper {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-flow: column nowrap;
+    -ms-flex-flow: column nowrap;
+    flex-flow: column nowrap; }
+  .l-footer-col-1,
+  .l-footer-col-2 {
+    width: calc(100% - 10px); }
+  .l-footer-col-2 {
+    padding-top: 10px; } }
+
+.l-site-detail {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row nowrap;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap; }
+  @media screen and (max-width: 600px) {
+    .l-site-detail {
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-flex-flow: column nowrap;
+      -ms-flex-flow: column nowrap;
+      flex-flow: column nowrap; } }
+
+.site-header {
+  width: 100%;
+  height: 100px;
+  margin: 0;
+  background: url("/images/header-bg2.jpg") no-repeat center center; }
+  @media screen and (max-width: 600px) {
+    .site-header {
+      width: 107%;
+      height: 70px; } }
+
+.site-title {
+  margin-bottom: 0;
+  color: #f2cb05;
+  font-family: "museo-slab", serif;
+  font-size: 3.8em;
+  font-weight: 900;
+  line-height: 75px;
+  text-decoration: none;
+  text-shadow: 4px 4px 2px #f22e2e; }
+  @media screen and (max-width: 800px) {
+    .site-title {
+      padding-left: 10px;
+      font-size: 2.2em; } }
+  @media screen and (max-width: 600px) {
+    .site-title {
+      padding-left: 2px;
+      font-size: 1.5em; } }
+
+.site-title:hover, .site-title:visited {
+  color: #f2cb05;
+  text-decoration: none; }
+
+.site-nav {
+  margin-right: 0;
+  margin-bottom: 0;
+  color: #fff;
+  font-family: "museo-slab", serif;
+  font-size: 1.1em;
+  font-weight: 400; }
+  @media screen and (max-width: 600px) {
+    .site-nav {
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      position: absolute;
+      top: 20px;
+      right: 10px;
+      -webkit-flex-flow: column nowrap;
+      -ms-flex-flow: column nowrap;
+      flex-flow: column nowrap;
+      -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+      justify-content: flex-end;
+      margin: 0;
+      padding-left: 0;
+      border-radius: 8px;
+      background-color: #fff; }
+      .site-nav .menu-icon {
+        display: block;
+        position: relative;
+        padding: 10px;
+        line-height: 0;
+        text-align: right; }
+      .site-nav .trigger {
+        display: none;
+        text-align: right; }
+      .site-nav:hover .trigger {
+        display: block;
+        padding-bottom: 5px; }
+      .site-nav .page-link {
+        display: block;
+        padding: 5px 10px;
+        color: #126868;
+        text-shadow: none; } }
+
+.menu-icon {
+  display: none; }
+
+.page-link {
+  color: #fff;
+  line-height: 1.4;
+  text-shadow: 2px 2px 2px #f22e2e;
+  vertical-align: bottom; }
+  .page-link:not(:first-child) {
+    margin-left: 20px; }
+
+.page-link:hover {
+  text-decoration: none; }
+
+.site-footer {
+  width: 100%;
+  height: 100px;
+  padding: 20px 0;
+  background: url("/images/bottom-bg.png") no-repeat center center; }
+  @media screen and (max-width: 600px) {
+    .site-footer {
+      height: 75px;
+      padding: 10px; } }
+  .site-footer h3 {
+    font-family: "museo-slab", serif; }
+
+.social {
+  margin: 0;
+  margin-top: -12px;
+  padding-left: 30px;
+  list-style: none; }
+  .social li {
+    padding-right: 10px;
+    float: left;
+    font-size: 1.8em; }
+
+.section-heading {
+  font-family: "museo-slab", serif;
+  font-size: 1.2em;
+  font-weight: 900; }
+
+.post-list {
+  width: 70%;
+  margin-left: 0;
+  padding-right: 20px; }
+  @media screen and (max-width: 600px) {
+    .post-list {
+      width: 100%; } }
+  .post-list ul {
+    margin-left: 0;
+    list-style: none; }
+  .post-list li {
+    margin-bottom: 10px; }
+
+.post-meta {
+  color: #5d5d60;
+  font-size: 0.89em;
+  font-style: italic; }
+
+.post-title {
+  color: #126868;
+  font-family: "museo-slab", serif;
+  font-size: 2em;
+  letter-spacing: -1px;
+  line-height: 1; }
+  @media screen and (max-width: 800px) {
+    .post-title {
+      font-size: 2.2em; } }
+  @media screen and (max-width: 600px) {
+    .post-title {
+      font-size: 1.8em; } }
+  .post-title a:hover {
+    text-decoration: none; }
+
+.excerpt {
+  margin-bottom: 20px; }
+
+.post-content {
+  margin-bottom: 20px;
+  padding-bottom: 40px; }
+  .post-content h1, .post-content h2, .post-content h3, .post-content h4, .post-content .byline {
+    color: dark(#21bfbf, 20%);
+    font-family: "museo-slab", serif; }
+  .post-content h1 {
+    margin-bottom: 0;
+    font-size: 2em; }
+    @media screen and (max-width: 800px) {
+      .post-content h1 {
+        font-size: 1.8em; } }
+  .post-content h2 {
+    padding-top: 20px;
+    font-size: 1.6em; }
+    @media screen and (max-width: 800px) {
+      .post-content h2 {
+        font-size: 1.6em; } }
+  .post-content h3 {
+    padding-top: 10px;
+    font-size: 1.2em; }
+    @media screen and (max-width: 800px) {
+      .post-content h3 {
+        font-size: 1.2em; } }
+  .post-content h4 {
+    padding-top: 10px;
+    font-size: 1.2em; }
+    @media screen and (max-width: 800px) {
+      .post-content h4 {
+        font-size: 1.2em; } }
+  .post-content a, .post-content a:visited, .post-content a:hover {
+    text-decoration: underline; }
+
+.more {
+  font-family: "museo-slab", serif;
+  font-size: 1em;
+  font-style: italic;
+  font-weight: 700;
+  text-align: right; }
+
+.bottom-line {
+  font-size: .85em;
+  font-style: italic; }
+
+.work {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  padding-bottom: 40px; }
+
+.work-thumb {
+  width: 200px;
+  max-width: 200px;
+  margin-top: 10px;
+  margin-right: 20px;
+  padding-right: 10px;
+  font-weight: 700; }
+  .work-thumb > img {
+    padding: 0; }
+  .work-thumb > a {
+    text-decoration: none; }
+  .work-thumb > a:hover {
+    text-decoration: underline; }
+
+.lightbox {
+  margin-top: 20px; }
+  .lightbox > ul {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+    list-style: none; }
+    .lightbox > ul > li {
+      position: relative;
+      margin-right: 20px;
+      margin-bottom: 20px;
+      background-color: #fff;
+      color: #5d5d60;
+      font-size: 0.89em;
+      text-align: center;
+      box-shadow: 0 8px 6px -6px rgba(48, 102, 102, 0.75);
+      cursor: pointer; }
+      .lightbox > ul > li > img {
+        display: block;
+        padding: 0; }
+      .lightbox > ul > li :hover {
+        box-shadow: 0 8px 6px -6px rgba(48, 102, 102, 0.75); }
+        .lightbox > ul > li :hover .image-title {
+          opacity: 1; }
+        .lightbox > ul > li :hover .title {
+          -webkit-transform: scale(1);
+          transform: scale(1); }
+
+.image-title {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-flex-flow: column nowrap;
+  -ms-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  -webkit-align-items: middle;
+  -ms-flex-align: middle;
+  align-items: middle;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 100%;
+  height: 145px;
+  transition: all .5s;
+  background: rgba(48, 102, 102, 0.75);
+  opacity: 0; }
+
+.title {
+  -webkit-transform: scale(0);
+  transform: scale(0);
+  transition: all .25s;
+  color: #fff;
+  font-family: "museo-slab", serif;
+  font-size: 1.4em; }
+
+.lb-title {
+  display: block;
+  padding: 5px 0;
+  font-weight: 700;
+  text-align: center; }
+
+.lb-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.85); }
+
+.lb-canvas {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  -webkit-flex-flow: column no-wrap;
+  -ms-flex-flow: column no-wrap;
+  flex-flow: column no-wrap;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  padding: 10px;
+  background: #fff;
+  box-shadow: 0 0 20px 5px #000; }
+
+.lb-canvas-loading {
+  background: #fff url("/images/spinner.gif") center center no-repeat; }
+
+.lb-controls {
+  position: fixed;
+  right: 0;
+  bottom: 30px;
+  left: 0;
+  width: 400px;
+  margin: 0 auto;
+  background: rgba(0, 0, 0, 0.75);
+  color: #fff; }
+  .lb-controls div {
+    height: 30px;
+    line-height: 30px; }
+  .lb-controls .inactive {
+    cursor: default;
+    opacity: .1; }
+
+.lb-prev, .lb-next {
+  position: absolute;
+  top: 0;
+  padding: 5px 12px;
+  background: #000;
+  cursor: pointer; }
+
+.lb-prev {
+  left: 0;
+  border-right: 1px solid rgba(255, 255, 255, 0.1); }
+
+.lb-next {
+  right: 0;
+  border-left: 1px solid rgba(255, 255, 255, 0.1); }
+
+.project-meta {
+  margin-bottom: 20px;
+  font-size: 1.1em; }
+  .project-meta > dt {
+    width: 75px;
+    float: left;
+    color: #126868;
+    font-family: "museo-slab", serif; }
+  .project-meta > dd {
+    color: #5d5d60; }
+
+.side-img {
+  margin-right: 20px;
+  float: left; }
+  @media screen and (max-width: 600px) {
+    .side-img {
+      margin-right: 0 auto;
+      float: none; } }
+
+.return-to {
+  padding-top: 40px; }
+
+.side-bar {
+  width: 30%; }
+  @media screen and (max-width: 600px) {
+    .side-bar {
+      width: 100%; } }
+
+.tags {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  margin-bottom: 10px; }
+
+.tag {
+  font-size: .8em; }
+  .tag a {
+    display: block;
+    margin: 4px;
+    padding: 2px 4px;
+    border: 1px solid #21bfbf;
+    border-radius: 4px;
+    background-color: #c9c9c9;
+    text-decoration: none; }
+  .tag a:hover {
+    background-color: #fff; }
+
+.tag-list {
+  margin-bottom: 40px; }
+  .tag-list ul {
+    margin-left: 0;
+    list-style: none; }
+  .tag-list li {
+    padding-bottom: 10px; }
+
+figure {
+  border: 1px solid #c9c9c9; }
+
+.highlight {
+  background: #fff; }
+  .highlight pre {
+    margin: 0;
+    border: 0; }
+  .highlight .c {
+    color: #999;
+    font-style: italic; }
+  .highlight .err {
+    background-color: #e3d2d2;
+    color: #a61717; }
+  .highlight .k {
+    font-weight: bold; }
+  .highlight .o {
+    font-weight: bold; }
+  .highlight .cm {
+    color: #999;
+    font-style: italic; }
+  .highlight .cp {
+    color: #999;
+    font-weight: bold; }
+  .highlight .c1 {
+    color: #999;
+    font-style: italic; }
+  .highlight .cs {
+    color: #999;
+    font-style: italic;
+    font-weight: bold; }
+  .highlight .gd {
+    background-color: #fdd;
+    color: #000; }
+    .highlight .gd .x {
+      background-color: #faa;
+      color: #000; }
+  .highlight .ge {
+    font-style: italic; }
+  .highlight .gr {
+    color: #a00; }
+  .highlight .gh {
+    color: #999; }
+  .highlight .gi {
+    background-color: #dfd;
+    color: #000; }
+    .highlight .gi .x {
+      background-color: #afa;
+      color: #000; }
+  .highlight .go {
+    color: #888; }
+  .highlight .gp {
+    color: #555; }
+  .highlight .gs {
+    font-weight: bold; }
+  .highlight .gu {
+    color: #aaa; }
+  .highlight .gt {
+    color: #a00; }
+  .highlight .kc {
+    font-weight: bold; }
+  .highlight .kd {
+    font-weight: bold; }
+  .highlight .kp {
+    font-weight: bold; }
+  .highlight .kr {
+    font-weight: bold; }
+  .highlight .kt {
+    color: #458;
+    font-weight: bold; }
+  .highlight .m {
+    color: #099; }
+  .highlight .s {
+    color: #d14; }
+  .highlight .na {
+    color: #008080; }
+  .highlight .nb {
+    color: #0086b3; }
+  .highlight .nc {
+    color: #458;
+    font-weight: bold; }
+  .highlight .no {
+    color: #008080; }
+  .highlight .ni {
+    color: #800080; }
+  .highlight .ne {
+    color: #900;
+    font-weight: bold; }
+  .highlight .nf {
+    color: #900;
+    font-weight: bold; }
+  .highlight .nn {
+    color: #555; }
+  .highlight .nt {
+    color: #000080; }
+  .highlight .nv {
+    color: #008080; }
+  .highlight .ow {
+    font-weight: bold; }
+  .highlight .w {
+    color: #bbb; }
+  .highlight .mf {
+    color: #099; }
+  .highlight .mh {
+    color: #099; }
+  .highlight .mi {
+    color: #099; }
+  .highlight .mo {
+    color: #099; }
+  .highlight .sb {
+    color: #d14; }
+  .highlight .sc {
+    color: #d14; }
+  .highlight .sd {
+    color: #d14; }
+  .highlight .s2 {
+    color: #d14; }
+  .highlight .se {
+    color: #d14; }
+  .highlight .sh {
+    color: #d14; }
+  .highlight .si {
+    color: #d14; }
+  .highlight .sx {
+    color: #d14; }
+  .highlight .sr {
+    color: #009926; }
+  .highlight .s1 {
+    color: #d14; }
+  .highlight .ss {
+    color: #990073; }
+  .highlight .bp {
+    color: #999; }
+  .highlight .vc {
+    color: #008080; }
+  .highlight .vg {
+    color: #008080; }
+  .highlight .vi {
+    color: #008080; }
+  .highlight .il {
+    color: #099; }
+  .highlight .lineno {
+    color: #5d5d60; }
+
+/*# sourceMappingURL=main.css.map */
 
 /*# sourceMappingURL=main.css.map */
